welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: type mismatch;
 found   : Unit
 required: Int
  for (k <- 0 to num-1) {
         ^